2003-06-08  Jordi Mallach  <jordi@sindominio.net>

	* TODO: Updated.

2003-06-08  Jordi Mallach  <jordi@sindominio.net>

	* src/Makefile.am (GTETPIXMAPSDIR): Define as
	$(datadir)/pixmaps/gtetrinet.
	(PIXMAPSDIR): Change to $(datadir)/pixmaps.
	* src/winlist.c (winlist_page_new): Use GTETPIXMAPSDIR instead of
	PIXMAPSDIR.

2003-06-07  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.2.

	* configure.in: Release gtetrinet 0.7.2, "Tellement mieux".

2003-06-07  Dani Carbonell  <bocata@panete.net>

	* src/commands.c (make_menus): added keyboard shortcuts to Start,
	Pause, Stop, Connect, Disconnect and Change Team menu items.

	* src/tetrinet.c (tetrinet_key): change the default return value
	from FALSE to TRUE. This was preventing ctrl+q from working when
	the user was in the fields tab.

2003-06-06  Jordi Mallach  <jordi@sindominio.net>

	* src/config.c (config_loadconfig): load values for new keys.
	Add notify functions for new gconf keys.
	* src/config.h: Add new declarations and key defines.
	* src/dialogs.c (prefdialog_drawkeys): Add new actions to treeview.
	* src/gtetrinet (main): Notify gconf of changes to new keys.
	* src/tetrinet.c (tetrinet_key): Handle new special keys. Closes
	Bugzilla Bug#105117.

	* gtetrinet.schemas.in: Add schemas for new configurable game keys.

2003-06-05  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.7.2.

2003-06-05  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (textentry): Show the /msgs commands in the partyline.

2003-06-05  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

2003-06-04  Dani Carbonell  <bocata@panete.net>

	* src/partyline.c (is_nick): new function, it will compare the
	actual string with a complete nickname. The completion will be
	done with the first match.
	(playerlist_complete_nick): new function, it'll launch the
	iteration through the player list, calling is_nick for each nick.